--- a/Ejemplos_clase/Ejemplos_8.Rmd
+++ b/Ejemplos_clase/Ejemplos_8.Rmd
@@ -62,8 +62,8 @@ inegi_data <- read.xlsx("./inegi_data.xlsx", detectDates = TRUE)
 inegi_data <- inegi_data |> filter(year(Periodo)>=2016)
 
 
-MXN_xts <- xts(inegi_data$Tipo_Cambio_Nominal, order.by=inegi_data$Periodo)
-MXN_ts <- ts(inegi_data$Tipo_Cambio_Nominal, start = c(2016, 1), frequency = 12)
+MXN_xts <- xts(inegi_data$Cetes_28_Dias, order.by=inegi_data$Periodo)
+MXN_ts <- ts(inegi_data$Cetes_28_Dias, start = c(2016, 1), frequency = 12)
 ts_info(MXN_xts)
 ts_plot(MXN_xts, slider=TRUE)
 ```
@@ -85,7 +85,7 @@ ts_seasonal(MXN_xts, type = "cycle", palette = "Paired")
 ## Boxplot trimestral
 
 ```{r echo=FALSE}
-plot_time_series_boxplot(inegi_data,  Periodo, Tipo_Cambio_Nominal, .period= "3 months", .color_var = year(Periodo), .interactive=TRUE, .smooth = FALSE)
+plot_time_series_boxplot(inegi_data,  Periodo, Cetes_28_Dias, .period= "3 months", .color_var = year(Periodo), .interactive=TRUE, .smooth = FALSE)
 ```
 
 
@@ -175,11 +175,14 @@ ts_lags(MXN_ts)
 
 Una serie temporal es **estacionaria** si la media y la varianza es constante a lo largo del tiempo y la autocovarianza entre dos puntos depende sólo de la distancia temporal entre ellos, no del momento específico.
 
-Se aplica la preuva de Dickey-Fuller (ADF)
+Se aplica la prueba de Dickey-Fuller (ADF)
 
 ```{r}
 adf.test(MXN_ts, alternative="stationary")
 ```
+
+Como el p-value > 0.05, no existe suficiente evidencia estadística en contra de la hipótesis nula (la serie no  es estacionaria).
+
 
 ## Diferenciación
 
@@ -233,6 +236,7 @@ ts_decompose(MXN_diff, type = "both")
 MXN_ar <- ar(MXN_ts, method = "mle", order.max = 5)
 MXN_ar
 ```
+
 
 ## Gráfica
 
